<resources>
    <string name="app_name">eduFUN</string>
    <string name="info_authors">made by: Ralfs and Kristers</string>
    <string name="counting_game_ins">•The game will start a countdown and after vibrate for a specific amount of times</string>
    <string name="counting_game_ins2">•Count the vibrations and answer when the game asks</string>
    <string name="counting_game_ins3">When you are ready, press "START"</string>
    <string name="counting_game_START">START</string>
    <string name="counting_game_head">counting game</string>
    <string name="main_button_colors">colors</string>
    <string name="main_button_shapes">shapes</string>
    <string name="main_button_counting">counting</string>
    <string name="main_button_animals">animals</string>
    <string name="main_information">i</string>
    <string name="image_desc">Main screen logo</string>
    <string name="lang">Language</string>
    <string name="recognition_game_text">color recognition game</string>
    <string name="START_colorGame">START</string>
    <string name="START_colorGame_text1">•Set your eduFUN booklet in front of you and open the color game page</string>
    <string name="START_colorGame_text2">•The game will ask for a color on screen</string>
    <string name="START_colorGame_text3">•Point the camera to the color and press "OK"</string>
    <string name="START_colorGame_text4">When you are ready, press "START"</string>
    <string name="animal_gameText">animal game</string>
    <string name="animal_gameText1">•Set your eduFUN booklet in front of you and open the animal game page</string>
    <string name="animal_gameText2">•The game will ask for an animal by its name</string>
    <string name="animal_gameText3">•Point the camera to the QR code next to the animal and press "OK"</string>
    <string name="animal_gameText4">When you are ready press ""START""</string>
    <string name="animal_gameText5">START</string>
    <string name="animal_game_started_text1">animal:</string>
    <string name="animal_game_started_text2"> </string>
    <string name="animal_game_started_text3">scan</string>
    <string name="animal_game_started_text4">your answer:</string>
    <string name="animal_game_started_text5">CORRECT!</string>
    <string name="animal_game_started_text6">INCORRECT!</string>
    <string name="info">An app with different educational games for kids, using different interactions with the devices</string>
    <string name="counting_game_get_ready">GET READY!</string>
    <string name="countdown">%1$d</string>
    <string name="button_1">%1$d</string>
    <string name="button_2">%1$d</string>
    <string name="button_3">%1$d</string>
    <string name="counting_game_count">COUNT!</string>
    <string name="counting_game_what_is">What is the anwer?</string>
    <string name="counting_finish_correct">%1$s</string>
    <string name="counting_finish_incorrect">%1$s</string>
    <string name="counting_finish_playagain">PLAY AGAIN</string>
    <string name="counting_finish_exit">EXIT</string>
    <string name="color_game_color_name">color:</string>
    <string name="color_game_random_color"> </string>
    <string name="color_game_ok">OK</string>
    <string name="color_game_your_answer">your answer:</string>
    <string name="color_game_answer"> </string>
    <string name="color_game_playagain">PLAY AGAIN</string>
    <string name="color_game_takephoto">CHOOSE</string>


    <string name="animal_game_reload">AGAIN</string>
    <string name="change_color">Change color</string>

</resources>
