<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#74b9ff"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btnColor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:layout_marginEnd="85dp"
        android:layout_marginRight="85dp"
        android:background="@drawable/rounded_button"
        android:shadowColor="#00000000"
        android:text="@string/main_button_colors"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:typeface="normal"
        app:fontFamily="@font/peace_sans"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="85dp"
        android:layout_marginRight="85dp"
        android:background="@drawable/rounded_button"
        android:shadowColor="#00000000"
        android:text="@string/main_button_shapes"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:typeface="normal"
        app:fontFamily="@font/peace_sans"
        app:layout_constraintBottom_toTopOf="@+id/btnAnimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnColor" />

    <Button
        android:id="@+id/btnAnimal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"

        android:layout_marginTop="30dp"
        android:layout_marginEnd="85dp"
        android:layout_marginRight="85dp"
        android:background="@drawable/rounded_button"
        android:shadowColor="#00000000"
        android:text="@string/main_button_animals"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:typeface="normal"
        app:fontFamily="@font/peace_sans"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="425dp"
        android:contentDescription="@string/image_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/edufun" />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="85dp"
        android:layout_marginRight="85dp"
        android:layout_marginBottom="105dp"
        android:background="@drawable/rounded_button"
        android:shadowColor="#00000000"
        android:text="@string/main_button_counting"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:typeface="normal"
        app:fontFamily="@font/peace_sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAnimal" />

    <Button
        android:id="@+id/langbutton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="240dp"
        android:layout_marginRight="240dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_button"
        android:shadowColor="#00000000"
        android:text="@string/lang"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:typeface="normal"
        app:fontFamily="@font/peace_sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/btnColChange"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="110dp"
        android:layout_marginRight="110dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_button"
        android:shadowColor="#00000000"
        android:text="@string/change_color"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:typeface="normal"
        app:fontFamily="@font/peace_sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/langbutton"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/btn_info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_information"
        android:text="@string/main_information"
        android:textAllCaps="false"
        android:textSize="40sp"
        app:fontFamily="@font/peace_sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnColChange"
        app:layout_constraintTop_toBottomOf="@+id/button4" />


</androidx.constraintlayout.widget.ConstraintLayout>