<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffeaa7"
    tools:context=".counting_info">


    <Button
        android:id="@+id/homebtn"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"

        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@mipmap/home_round"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout_finish"
        android:layout_width="300dp"
        android:layout_height="220dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_rectangle"
        android:visibility="invisible"
        app:fontFamily="@font/peace_sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17000002">

        <ImageView
            android:id="@+id/imageViewAnswer"
            android:contentDescription="@string/image_desc"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/checkmark" />

        <TextView
            android:id="@+id/textView_correct"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="200dp"
            android:gravity="center"
            android:text="@string/counting_finish_correct"
            android:textColor="#FFEFFF"
            android:textSize="35sp"
            app:fontFamily="@font/peace_sans" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout4"
        android:layout_width="300dp"
        android:layout_height="149dp"
        android:layout_marginBottom="250dp"
        android:background="@drawable/rounded_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible">

        <TextView
            android:id="@+id/text_view_what"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginStart="45dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/counting_game_what_is"
            android:textColor="#FFEFFF"
            android:textSize="30sp"
            app:fontFamily="@font/peace_sans" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_rectangle"
        app:fontFamily="@font/peace_sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.366"
        android:visibility="visible">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="237dp"
            android:layout_height="115dp"
            android:layout_marginStart="37dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="200dp"
            android:gravity="center"
            android:text="@string/counting_game_get_ready"
            android:textColor="#FFEFFF"
            android:textSize="40sp"
            app:fontFamily="@font/peace_sans" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="150dp"
            android:layout_height="205dp"
            android:layout_marginStart="75dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:textColor="#FFEFFF"
            android:textSize="70sp"
            app:fontFamily="@font/peace_sans"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/textView16"
            android:layout_width="250dp"
            android:layout_height="205dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="125dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:textColor="#FFEFFF"
            android:text="@string/counting_game_count"
            android:textSize="55sp"
            app:fontFamily="@font/peace_sans"
            android:visibility="invisible"/>


    </FrameLayout>

    <Button
        android:id="@+id/btn_answ1"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:background="@drawable/rounded_button"
        android:text="@string/button_2"
        app:fontFamily="@font/peace_sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="50sp"
        app:layout_constraintVertical_bias="0.53"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/btn_answ2"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:background="@drawable/rounded_button"
        android:text="@string/button_1"
        android:textSize="50sp"
        app:fontFamily="@font/peace_sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/btn3"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:background="@drawable/rounded_button"
        android:text="@string/button_3"
        android:textSize="50sp"
        app:fontFamily="@font/peace_sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/button_play_again"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:background="@drawable/rounded_button"
        android:text="@string/counting_finish_playagain"
        android:textSize="30sp"
        app:fontFamily="@font/peace_sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71000004"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/button_play_exit"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:background="@drawable/rounded_button_exit_red"
        android:text="@string/counting_finish_exit"
        android:textSize="30sp"
        app:fontFamily="@font/peace_sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86"
        android:visibility="invisible"/>


</androidx.constraintlayout.widget.ConstraintLayout>