<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Animal">

<LinearLayout
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="horizontal"
android:id="@+id/aPreview">


</LinearLayout>

    <Button
        android:id="@+id/homebtn"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"

        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@mipmap/home_round"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAudioAnimal"

        android:layout_width="55dp"
        android:layout_height="55dp"

        android:layout_marginTop="420dp"
        android:layout_marginEnd="230dp"
        android:layout_marginRight="250dp"
        android:background="@mipmap/audio_round"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.542" />

<FrameLayout
android:layout_width="310dp"
android:layout_height="470dp"
android:layout_marginStart="50dp"
android:layout_marginLeft="50dp"
android:layout_marginEnd="50dp"
android:layout_marginRight="50dp"
android:layout_marginBottom="20dp"
android:background="@drawable/rounded_rectangle"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="parent"
app:layout_constraintVertical_bias="0.808">

<TextView
    android:id="@+id/textView8"
    android:layout_width="250dp"
    android:layout_height="70dp"
    android:layout_marginStart="30dp"
    android:layout_marginLeft="0dp"
    android:layout_marginTop="0dp"
    android:layout_marginEnd="50dp"
    android:layout_marginRight="190dp"
    android:fontFamily="@font/peace_sans"
    android:gravity="center"
    android:text="@string/animal_gameText"
    android:textColor="#FFE683"
    android:textSize="37sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="250dp"
        android:layout_height="90dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="200dp"
        android:fontFamily="@font/peace_sans"

        android:text="@string/animal_gameText1"
        android:textColor="#FFEFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="200dp"
        android:fontFamily="@font/peace_sans"

        android:text="@string/animal_gameText2"
        android:textColor="#FFEFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="250dp"
        android:layout_height="85dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="225dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="200dp"
        android:fontFamily="@font/peace_sans"

        android:text="@string/animal_gameText3"
        android:textColor="#FFEFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="250dp"
        android:layout_height="85dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="305dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="200dp"
        android:gravity="center"
        android:fontFamily="@font/peace_sans"

        android:text="@string/animal_gameText4"
        android:textColor="#FFEFFF"
        android:textSize="18sp" />

    <Button
        android:id="@+id/animalStart"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="77dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="395dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/rounded_button"
        android:clickable="false"
        android:fontFamily="@font/peace_sans"
        android:gravity="center"
        android:onClick="buttonPressed"
        android:shadowColor="#00000000"
        android:text="@string/animal_gameText5"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>