<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".color">

    <Button
        android:id="@+id/homebtn"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"

        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@mipmap/home_round"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAudioInfo"

        android:layout_width="55dp"
        android:layout_height="55dp"

        android:layout_marginTop="350dp"
        android:layout_marginEnd="230dp"
        android:layout_marginRight="250dp"
        android:background="@mipmap/audio_round"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.542" />

    <FrameLayout
        android:layout_width="310dp"
        android:layout_height="470dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/rounded_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/button"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_marginStart="77dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="395dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:shadowColor="#00000000"
            android:text="@string/START_colorGame"
            android:textSize="24sp"
            app:fontFamily="@font/peace_sans"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="237dp"
            android:layout_height="90dp"
            android:layout_marginStart="37dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="200dp"
            android:gravity="center"
            android:text="@string/recognition_game_text"
            android:textColor="#FFE683"
            android:textSize="24sp"
            app:fontFamily="@font/peace_sans" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="237dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="200dp"
            android:text="@string/START_colorGame_text1"

            android:textColor="#FFEFFF"
            android:textSize="18sp"
            app:fontFamily="@font/peace_sans" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="237dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="195dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="200dp"
            android:text="@string/START_colorGame_text2"

            android:textColor="#FFEFFF"
            android:textSize="18sp"
            app:fontFamily="@font/peace_sans" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="237dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="250dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="200dp"
            android:text="@string/START_colorGame_text3"

            android:textColor="#FFEFFF"
            android:textSize="18sp"
            app:fontFamily="@font/peace_sans" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="237dp"
            android:layout_height="70dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="200dp"
            android:gravity="center"
            android:text="@string/START_colorGame_text4"
            android:textColor="#FFEFFF"
            android:textSize="18sp"
            app:fontFamily="@font/peace_sans" />

        <LinearLayout
            android:id="@+id/cPreview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


        </LinearLayout>


    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>