<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#74b9ff"
    tools:context=".info">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="329dp"
        android:layout_height="180dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/edufun"
        android:contentDescription="@string/app_name"/>

    <Button
        android:id="@+id/bbtnColChange"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/rounded_button"
        android:shadowColor="#00000000"
        android:text="@string/change_color"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:typeface="normal"
        app:fontFamily="@font/peace_sans"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnlangbutton"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/rounded_button"
        android:shadowColor="#00000000"
        android:text="@string/lang"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:typeface="normal"
        app:fontFamily="@font/peace_sans"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


</androidx.constraintlayout.widget.ConstraintLayout>